Overhaul of user login process through OAUTH2 / OIDC; utilizing spring functions